[package]
name = "qti"
version = "0.1.0"
authors = ["David Ormsbee <ormsbee@gmail.com>"]
edition = "2018"

[lib]
name = "qti"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
xmltree = "0.10"
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

# Added this to try to get wasmtime to work, but I think the issue was unrelated.
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ["-Os", "--enable-mutable-globals"]